# xrpl-rust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  codecov.yml  docker-compose.yml  xls-70-pr-154.md
.cargo-husky/hooks/: pre-commit
.ci-config/: xrpld.cfg
.github/: copilot-instructions.md
.github/workflows/: audit_test.yml  build_and_lint.yml  copilot-setup-steps.yml  integration_test.yml  quality_test.yml  unit_test.yml
benches/: benchmarks.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: shamap_add_remove_roundtrip.rs  shamap_cache_consistency.rs  shamap_order_independence.rs  shamap_proof_integrity.rs
internal/mpt-crypto/: Cargo.toml  README.md
internal/mpt-crypto-sys/: .gitignore  Cargo.toml  README.md  build.rs
internal/mpt-crypto-sys/scripts/: fetch_upstream.sh  regenerate_bindings.sh
internal/mpt-crypto-sys/src/: bindings.rs  lib.rs
internal/mpt-crypto-sys/tests/: smoke.rs
internal/mpt-crypto/src/: commit.rs  context.rs  encrypt.rs  error.rs  keypair.rs  lib.rs  prove.rs  types.rs  verify.rs
internal/mpt-crypto/tests/: integration.rs
proptest-regressions/models/transactions/: credential_delete.txt
src/: constants.rs  lib.rs
src/_serde/: mod.rs
src/asynch/: exceptions.rs  mod.rs
src/asynch/clients/: client.rs  exceptions.rs
src/asynch/ledger/: mod.rs
src/asynch/transaction/: exceptions.rs  mod.rs  submit_and_wait.rs
src/asynch/wallet/: mod.rs
src/cli/: mod.rs
src/core/: mod.rs
src/core/binarycodec/: binary_wrappers.rs  mod.rs  test_cases.rs
src/core/keypairs/: algorithms.rs  mod.rs
src/core/shamap/: hash_prefix.rs  ledger.rs  mod.rs  sha512half.rs  tree.rs
src/models/: credential_authorization.rs  exceptions.rs  mod.rs
src/models/amount/: issued_currency_amount.rs  mod.rs  mpt_amount.rs  xrp_amount.rs
src/models/currency/: issued_currency.rs  mod.rs  mpt.rs  mpt_currency.rs
src/models/ledger/: mod.rs
src/models/requests/: account_channels.rs  account_currencies.rs  account_lines.rs  account_objects.rs  account_offers.rs  account_tx.rs  amm_info.rs  channel_verify.rs  deposit_authorize.rs  gateway_balances.rs  mod.rs  (+22 more)
src/signing/: exceptions.rs  mod.rs
src/transaction/: exceptions.rs  mod.rs  multisign.rs
src/utils/: exceptions.rs  get_xchain_claim_id.rs  mod.rs  mptoken_metadata.rs  parse_nftoken_id.rs  str_conversion.rs  testing.rs  time_conversion.rs  xrpl_conversion.rs
src/wallet/: mod.rs
tests/: cli_integration.rs  funding.rs  integration_test.rs  proptest_credentials.rs  test_utils.rs  transaction.rs  utils.rs
tests/common/: amm.rs  constants.rs  mock_cli.rs  mod.rs  payment.rs  vault.rs  xchain.rs
tests/requests/: account_channels.rs  account_currencies.rs  account_info.rs  account_lines.rs  account_objects.rs  account_offers.rs  account_tx.rs  amm_info.rs  book_offers.rs  channel_verify.rs  deposit_authorized.rs  fee.rs  gateway_balances.rs  get_aggregate_price.rs  ledger.rs  ledger_closed.rs  ledger_current.rs  ledger_data.rs  ledger_entry.rs  mod.rs  no_ripple_check.rs  ping.rs  random.rs  ripple_path_find.rs  rpc_errors.rs  server_info.rs  server_state.rs  submit.rs  submit_multisigned.rs  tx.rs  vault_info.rs
tests/transactions/: account_delete.rs  account_set.rs  amm_bid.rs  amm_create.rs  amm_delete.rs  amm_deposit.rs  amm_vote.rs  amm_withdraw.rs  check_cancel.rs  check_cash.rs  check_create.rs  clawback.rs  confidential_mpt.rs  credential.rs  deposit_preauth.rs  did_delete.rs  did_set.rs  escrow_cancel.rs  escrow_create.rs  escrow_finish.rs  mod.rs  mptoken_authorize.rs  mptoken_end_to_end.rs  mptoken_issuance_create.rs  mptoken_issuance_destroy.rs  mptoken_issuance_set.rs  multisign_payment.rs  nftoken_accept_offer.rs  nftoken_burn.rs  nftoken_cancel_offer.rs  nftoken_create_offer.rs  nftoken_mint.rs  offer_cancel.rs  offer_create.rs  oracle_delete.rs  oracle_set.rs  payment.rs  payment_channel_claim.rs  payment_channel_create.rs  payment_channel_fund.rs  (+24 more)
xrpl-rust-macros/src/: lib.rs
(+137 files in other folders)
