[package]
name = "mpt-crypto"
version = "0.1.0-beta.1"
edition = "2024"
description = "Safe Rust wrappers around mpt-crypto-sys (XLS-0096 Confidential MPTs)."
license = "ISC"
repository = "https://github.com/XRPLF/xrpl-rust"
readme = "README.md"
keywords = ["xrpl", "mpt", "confidential", "cryptography", "secp256k1"]
categories = ["cryptography", "api-bindings"]

[lib]
name = "mpt_crypto"
# Doctests merged-binary loads libmpt-crypto.dylib at startup; the merged
# binary runs from a temp dir where our @loader_path-based rpath can't find
# it. End-to-end coverage lives in `tests/integration.rs` instead.
doctest = false

[dependencies]
# `version` is what crates.io resolves against once published; `path` is used
# for in-workspace builds. Publish `mpt-crypto-sys` first so this resolves.
mpt-crypto-sys = { path = "../mpt-crypto-sys", version = "0.1.0-beta.1" }
zeroize        = { version = "1.8", features = ["derive"] }
thiserror      = "2.0"
